<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="start_ride_button">Start Ride</string>
    <string name="profile_button">Profile</string>
    <string name="ride_list">Ride list</string>
    <string name="scooter_sharing">Scooter Sharing</string>
    <string name="scooter_name">Scooter name</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_new_location">Enter new location</string>
    <string name="location">location</string>
    <string name="timestamp">timestamp</string>
    <string name="name">name</string>
    <string name="time">Time</string>
    <string name="string_combiner">%s - %s</string>
    <string name="android_version_text">API Level %1$d</string>
    <string name="removes_ride">Removes ride</string>
    <string name="sign_out_button">Sign out</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="time_text">Time</string>
    <string name="address_text">Address</string>
    <string name="content_description_location">Location</string>
    <string name="scooter_title">Scooter Title</string>
    <string name="scooter_address">Scooter Address</string>
    <string name="image_of_scooter">Image of scooter</string>
    <string name="edit_card">Edit card</string>
    <string name="card_number">Card number</string>
    <string name="expiration_month_year">Expiration month/year</string>
    <string name="cvv">CVV</string>
    <string name="save">Save</string>
    <string name="exp_month_year">%s/%s</string>
    <string name="price_number">1.5</string>
    <string name="price">1.5 DKK pr. min</string>
    <string name="price_dkk">%s DKK</string>
    <string name="speed_m_ss">%s m/s\u00B2</string>
    <string name="_0_00_dkk">0.00 DKK</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="default_time">00:00:00</string>
    <string name="default_acceleration">0.0 m/s²</string>
    <string name="default_price">0.0 DDK</string>
    <string name="stop_ride">Stop ride</string>
</resources>
