<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CurrentRideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="20pt"
            android:layout_marginBottom="10pt"
            android:layout_width="match_parent"
            android:layout_height="351dp"
            app:srcCompat="@drawable/baseline_electric_scooter_24"
            android:contentDescription="@string/image_of_scooter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_time"
            android:textAppearance="@style/DigitalClockTextAppearance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/speed"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_acceleration"
            android:textAppearance="@style/Speed"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_price"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_price"
            android:textAppearance="@style/CurrentPrice"/>

        <Button
            android:id="@+id/stop_ride_button"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="10pt"
            android:layout_weight="0"
            android:text="@string/stop_ride" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
