<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/card"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Media -->
    <ImageView
        android:id="@+id/scooterImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/image_of_scooter"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/baseline_electric_scooter_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/scooterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scooter_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/scooterAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/scooter_address"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

<!--        <TextView-->
<!--            android:id="@+id/scooterSupportText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/supporting_text"-->
<!--            android:textAppearance="?attr/textAppearanceBody2"-->
<!--            android:textColor="?android:attr/textColorSecondary" />-->

    </LinearLayout>

</LinearLayout>

</com.google.android.material.card.MaterialCardView>