<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="234dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/scooter_sharing"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/map_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="Maps"
      />

    <Button
        android:id="@+id/start_ride_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_play_arrow_24"
        android:text="@string/start_ride_button"
        />

    <Button
        android:id="@+id/update_ride_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_edit_24"
        android:text="@string/update_ride_button"/>

    <Button
        android:id="@+id/show_ridelist_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_format_list_bulleted_24"
        app:icon="@drawable/baseline_format_list_bulleted_24"
        android:text="@string/ride_list"/>

    <TextView
        android:id="@+id/text_view_androidversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNav"
        />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_main"
        android:scrollIndicators="left"/>


</LinearLayout>


